# swarm-debug

./: .env.example  .gitignore  README.md  publish.sh  pyproject.toml  run.sh
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: Main.tsx
frontend/src/app/components/Layout/: Layout.tsx
frontend/src/app/components/Tree/: TreeNode.tsx
frontend/src/app/pages/Debugger/: Debugger.tsx  DebuggerHeader.tsx
frontend/src/app/pages/DependencyGraph/: DependencyGraph.tsx  FilterTree.tsx  GraphControls.tsx  GraphInspector.tsx  GraphStats.tsx  PathFilterPanel.tsx
frontend/src/app/pages/DependencyGraph/graph/: cyConfig.ts  folderView.ts  glob.ts  graphOps.ts
frontend/src/shared/state/: API_ENDPOINTS.ts  debuggerSlice.ts  debuggerThunks.ts  depgraphSlice.ts  store.ts  treeUtils.ts
frontend/src/shared/styles/: ThemeContext.tsx
frontend/src/types/: cytoscape-plugins.d.ts  depgraph.ts
swarm_debug/: __init__.py  cli.py  server.py
swarm_debug/apps/debugger/: debugger.py
swarm_debug/apps/depgraph/: depgraph.py
swarm_debug/core/depgraph/: scanner.py
swarm_debug/core/models/: Directory.py  project_scanner.py
swarm_debug/core/utils/: debug_arg_parser.py
swarm_debug/debugger_gui_build/: bundle.js  bundle.js.LICENSE.txt
