[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm-debug"
version = "0.1.55"
description = "A colorized, toggleable debug logger with a web GUI"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]",
    "packaging",
    "rich",
    "typer",
    "typeguard>=4.4",
    "uvicorn[standard]",
]

[project.scripts]
swarm-debug = "swarm_debug.cli:main"

[project.optional-dependencies]
dev = ["vulture"]

[tool.setuptools]
packages = [
    "swarm_debug",
    "swarm_debug.config",
    "swarm_debug.apps",
    "swarm_debug.apps.health",
    "swarm_debug.apps.debugger",
    "swarm_debug.core",
    "swarm_debug.core.models",
    "swarm_debug.core.log",
    "swarm_debug.core.utils",
    "swarm_debug.data",
    "swarm_debug.debugger_gui_build",
]

[tool.setuptools.package-data]
swarm_debug = ["py.typed", "debugger_gui_build/**/*", "data/*"]
